# SSPAC

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
.claude/: settings.local.json
.cursor/plans/: ----------e3481ab7.plan.md  sspac------f6f624f9.plan.md
benchmarks/: README.md  benchmark  second_shortest_benchmark.cpp  shortest_benchmark  shortest_benchmark.cpp  visualize_benchmark.py
data/leetcode/: .gitkeep  leetcode_second_shortest_path.json  test_cases.json
docs/: 00_init.md  01_visual.md  02_algorithm_performance_analysis.md  03_algorithm_complexity_analysis.md  04_cpp_implementation_summary.md
docs/data/: dataset_description.md
docs/dev/: spfa_dijkstra_cpp.md  spfa_dijkstra_python.md  进一步比较.md
notebooks/: analysis.ipynb
results/leetcode_experiments/metrics/: leetcode_report.json  leetcode_results.csv
scripts/: analyze_dataset_distribution.py  download_leetcode.py  download_leetcode_data.py  generate_report.py  run_experiments.py  run_leetcode_experiments  run_leetcode_experiments.cpp  run_leetcode_experiments.py  test_leetcode.py  visualize_sample_graphs.py
src/second_shortest_path/: __init__.py
src/second_shortest_path/algorithms/: README_CPP.md  __init__.py  dijkstra_two_dist.py  second_shortest_path  second_shortest_path_algorithms.cpp  spfa.cpp  spfa_extended.py
src/second_shortest_path/data/: __init__.py  generator.py  loader.py
src/second_shortest_path/evaluation/: __init__.py  metrics.py  visualizer.py
tests/: __init__.py  conftest.py  test_data_loader.py  test_dijkstra.py  test_graph_generator.py  test_spfa.py
(+2 files in other folders)
